--- a/index.html
+++ b/index.html
@@ -1,203 +1,135 @@
-<!doctype html>
-<html lang="bg">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PoorCoin (POOR) — Official</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>PoorCoin (POOR) — Official Site</title>
+<meta name="description" content="PoorCoin (POOR) — People's memecoin on BNB Smart Chain. Liquidity on PancakeSwap, transparent supply and active community.">
+<link rel="icon" href="poorcoin_32x32.svg" type="image/svg+xml">
 
-  <style>
-    :root{
-      --bg: #f7f7f9;
-      --card: #ffffff;
-      --muted: #6b7280;
-      --accent: #2b6cb0;
-      --accent-2: #1f7a5b;
-      --shadow: 0 8px 24px rgba(18, 24, 31, 0.06);
-      --radius: 12px;
-      font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    }
-    html,body{height:100%}
-    body{
-      margin:0;
-      background: linear-gradient(180deg,#fbfcfd,#f4f6f8);
-      color: #111827;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-    }
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-    .container{
-      max-width:1100px;
-      margin:28px auto;
-      padding:24px;
-    }
-
-    header{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:16px;
-      margin-bottom:18px;
-    }
-
-    .brand{
-      display:flex;
-      align-items:center;
-      gap:12px;
-    }
-    .brand .logo-pill{
-      width:44px;height:44px;border-radius:10px;
-      background:var(--card);
-      box-shadow:var(--shadow);
-      display:flex;align-items:center;justify-content:center;
-      font-weight:700;color:#111827;
-    }
-    .brand h1{font-size:18px;margin:0}
-    nav{display:flex;gap:8px;align-items:center}
-
-    a.navlink{
-      text-decoration:none;
-      color:var(--muted);
-      padding:8px 12px;border-radius:8px;
-      font-size:14px;
-    }
-    a.navlink:hover{background:rgba(0,0,0,0.03);color:var(--accent)}
-
-    .grid{
-      display:grid;
-      grid-template-columns: 1fr 360px;
-      gap:20px;
-    }
-
-    /* main card */
-    .card{
-      background:var(--card);
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
-      padding:22px;
-    }
-
-    .logo-area{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      height:260px;
-      background:linear-gradient(180deg, rgba(255,255,255,0.9), rgba(255,255,255,0.98));
-      border-radius:12px;
-      box-shadow: inset 0 1px 0 rgba(255,255,255,0.6);
-      position:relative;
-      overflow:hidden;
-    }
-
-    /* white square behind logo so it looks clean on site and when converted to 32x32 */
-    .logo-inner{
-      width:210px;height:150px;
-      background:#fff;border-radius:10px;
-      display:flex;align-items:center;justify-content:center;
-      box-shadow: 0 6px 18px rgba(18, 24, 31, 0.06);
-      transform: rotate(-12deg);
-    }
-    .logo-inner img{
-      width:85%;height:auto;display:block; filter: none;
-    }
-
-    /* right column */
-    .meta h3{margin:0 0 8px 0;font-size:16px}
-    .meta p{margin:6px 0;color:var(--muted);font-size:14px}
-
-    .links-list{list-style:none;padding:0;margin:10px 0 0 0;display:flex;flex-direction:column;gap:8px}
-    .links-list li a{
-      color:var(--accent);
-      text-decoration:none;font-weight:600;
-      background:rgba(43,108,176,0.06);
-      padding:8px 10px;border-radius:8px;display:inline-block;
-    }
-
-    .copy-btn{
-      display:inline-flex;align-items:center;gap:8px;
-      background:var(--accent);color:#fff;border:none;padding:8px 12px;border-radius:8px;
-      cursor:pointer;font-weight:600;
-      box-shadow: 0 6px 14px rgba(43,108,176,0.14);
-    }
-    .copy-btn.secondary{
-      background:#fff;color:var(--accent);border:1px solid rgba(0,0,0,0.06);
-      box-shadow:none;
-    }
-
-    .tokenomics{
-      margin-top:18px;
-      background:linear-gradient(180deg,#f9fafb,#ffffff);
-      padding:14px;border-radius:10px;border:1px solid rgba(17,24,39,0.03);
-    }
-
-    table.allocation{width:100%;border-collapse:collapse}
-    table.allocation td, table.allocation th{padding:8px 6px;text-align:left;border-bottom:1px dashed rgba(0,0,0,0.04)}
-    table.allocation th{color:var(--muted);font-weight:600;font-size:13px}
-
-    footer{margin-top:18px;text-align:center;color:var(--muted);font-size:14px}
-
-    /* action bar */
-    .actions{display:flex;gap:12px;align-items:center;margin-top:14px}
-    .btn{
-      padding:10px 16px;border-radius:10px;border:none;cursor:pointer;font-weight:700;
-      background:var(--accent);color:#fff;
-      box-shadow: 0 8px 22px rgba(43,108,176,0.12);
-    }
-    .btn.ghost{background:#fff;color:var(--accent);border:1px solid rgba(0,0,0,0.06);box-shadow:none}
-
-    /* responsive */
-    @media (max-width:980px){
-      .grid{grid-template-columns:1fr; padding-bottom:40px}
-      .meta{margin-top:12px}
-    }
-  </style>
+<style>
+  :root{
+    --bg: #f7f9fc;
+    --card: #ffffff;
+    --ink: #0b1220;
+    --muted:#5a6577;
+    --accent:#3b82f6;  /* син */
+    --accent-2:#22c55e;/* зелен */
+    --accent-3:#f59e0b;/* жълт */
+    --ring:rgba(59,130,246,.35);
+    --radius:18px;
+  }
+  *{box-sizing:border-box}
+  html,body{margin:0;padding:0;background:linear-gradient(180deg,#f7f9fc 0%,#eef3ff 60%,#f7f9fc 100%);color:var(--ink);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
+  a{color:var(--accent);text-decoration:none}
+  a:hover{opacity:.9}
+  .container{max-width:1080px;margin:0 auto;padding:28px 18px 80px}
+  /* NAV */
+  .nav{display:flex;align-items:center;justify-content:space-between;gap:14px}
+  .brand{display:flex;align-items:center;gap:10px;font-weight:800;letter-spacing:.3px}
+  .brand img{width:40px;height:40px;border-radius:10px;background:#fff;object-fit:contain}
+  .navlinks{display:flex;gap:14px;flex-wrap:wrap}
+  .btn,button{border:0;border-radius:14px;padding:10px 14px;font-weight:700;cursor:pointer;transition:transform .08s ease,box-shadow .08s ease}
+  .btn-ghost{background:transparent}
+  .btn-cta{background:var(--accent);color:#fff;box-shadow:0 8px 24px rgba(59,130,246,.25)}
+  .btn-cta:hover{transform:translateY(-1px)}
+  /* HERO */
+  .hero{display:grid;grid-template-columns:1.2fr .9fr;gap:22px;margin-top:28px}
+  .card{background:var(--card);border-radius:var(--radius);padding:22px;box-shadow:0 12px 30px rgba(15,23,42,.06),0 1px 0 rgba(15,23,42,.05)}
+  .logo-wrap{display:grid;place-items:center;height:320px;background:#fff;border-radius:16px;border:1px solid #edf0f7}
+  .logo-wrap img{max-height:80%;max-width:85%;display:block}
+  .tag{display:inline-flex;gap:8px;align-items:center;padding:6px 10px;border-radius:999px;background:#eef6ff;color:#1e40af;font-weight:700;font-size:.82rem}
+  .title{font-size:clamp(26px,3.2vw,36px);line-height:1.12;margin:14px 0 10px}
+  .muted{color:var(--muted)}
+  .stack{display:flex;flex-wrap:wrap;gap:10px}
+  .pill{background:#f1f5f9;border:1px solid #e5eaf2;padding:8px 10px;border-radius:11px;font-weight:700;color:#0f172a}
+  /* CONTRACT STRIP */
+  .contract{display:flex;flex-wrap:wrap;align-items:center;gap:10px;background:#0f172a;color:#fff;border-radius:16px;padding:14px 16px;box-shadow:0 10px 28px rgba(2,6,23,.25)}
+  .mono{font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace}
+  .copy{background:#111827;color:#fff}
+  .copy:hover{box-shadow:0 0 0 3px var(--ring)}
+  /* GRID BELOW */
+  .grid{display:grid;grid-template-columns:1fr 1fr;gap:22px;margin-top:22px}
+  table{width:100%;border-collapse:collapse}
+  th,td{padding:10px 12px;border-bottom:1px solid #eef1f6;text-align:left}
+  th{font-size:.9rem;color:#334155}
+  td:last-child,th:last-child{text-align:right}
+  .callout{display:flex;flex-direction:column;gap:12px}
+  .btn-row{display:flex;flex-wrap:wrap;gap:10px}
+  .btn-green{background:var(--accent-2);color:#fff;box-shadow:0 8px 24px rgba(34,197,94,.25)}
+  .btn-yellow{background:var(--accent-3);color:#111827}
+  .btn-dark{background:#111827;color:#fff}
+  /* FOOTER */
+  footer{margin-top:36px;color:#475569}
+  .divider{height:1px;background:#e6ebf4;margin:18px 0}
+  .by{font-weight:800;letter-spacing:.3px}
+  /* small */
+  @media (max-width:880px){
+    .hero{grid-template-columns:1fr}
+    .grid{grid-template-columns:1fr}
+    .logo-wrap{height:260px}
+  }
+</style>
 </head>
 <body>
   <div class="container">
-    <header>
+    <!-- NAV -->
+    <nav class="nav">
       <div class="brand">
-        <div class="logo-pill">POOR</div>
-        <div>
-          <h1>PoorCoin</h1>
-          <div style="color:var(--muted);font-size:13px">The People's Meme Token — BNB Smart Chain (BEP-20)</div>
+        <img src="poorcoin_logo.png" alt="PoorCoin logo">
+        <span>POORCOIN</span>
+      </div>
+      <div class="navlinks">
+        <a class="btn btn-ghost" href="#contract">Contract</a>
+        <a class="btn btn-ghost" href="https://t.me/poorcoin_bsc" target="_blank" rel="noopener">Telegram</a>
+        <a class="btn btn-ghost" href="https://x.com/SeeeskoTodorov" target="_blank" rel="noopener">Twitter / X</a>
+        <a class="btn btn-ghost" href="https://medium.com/@seeesko/poorcoin-poor-the-peoples-meme-token-2c7d47ef2989" target="_blank" rel="noopener">Medium</a>
+        <a class="btn btn-cta" href="https://pancakeswap.finance/swap?outputCurrency=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336&chain=bsc" target="_blank" rel="noopener">Buy on PancakeSwap</a>
+      </div>
+    </nav>
+
+    <!-- HERO -->
+    <section class="hero">
+      <div class="card">
+        <span class="tag">BNB Smart Chain • BEP-20</span>
+        <h1 class="title">PoorCoin (POOR)</h1>
+        <p class="muted">The people’s meme token on BNB Chain — fair access, simple branding, transparent supply and PancakeSwap liquidity.</p>
+        <div class="logo-wrap" aria-label="Official logo">
+          <img src="poorcoin_logo.png" alt="POOR logo (hand-drawn)">
         </div>
       </div>
 
-      <nav>
-        <a class="navlink" href="https://poorcoin.net" target="_blank" rel="noopener">Website</a>
-        <a class="navlink" href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank" rel="noopener">Contract</a>
-        <a class="navlink" href="https://t.me/poorcoin_bsc" target="_blank" rel="noopener">Telegram</a>
-        <a class="navlink" href="https://x.com/SeeeskoTodorov" target="_blank" rel="noopener">Twitter/X</a>
-        <a class="navlink" href="https://medium.com/@seeesko" target="_blank" rel="noopener">Medium</a>
-      </nav>
-    </header>
-
-    <main class="grid">
-      <!-- left -->
-      <section class="card">
-        <h2 style="margin-top:0">Official Logo</h2>
-
-        <div class="logo-area" aria-hidden="true">
-          <div class="logo-inner">
-            <!-- Put your file poorcoin_logo.png or poorcoin_logo.svg in the same folder -->
-            <img src="poorcoin_logo.png" alt="POOR logo" id="site-logo" />
-          </div>
+      <div class="card callout" id="contract">
+        <div class="pill">Official Links</div>
+        <div class="btn-row">
+          <a class="btn btn-dark" href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank" rel="noopener">View on BscScan</a>
+          <a class="btn btn-green" href="https://pancakeswap.finance/swap?outputCurrency=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336&chain=bsc" target="_blank" rel="noopener">Trade on PancakeSwap</a>
+          <a class="btn btn-yellow" href="https://pancakeswap.finance/add?chain=bsc&token0=BNB&token1=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank" rel="noopener">Add Liquidity</a>
         </div>
 
-        <div class="tokenomics">
-          <h3 style="margin:6px 0 10px 0">Token Distribution (Total supply: 1,000,000,000 POOR)</h3>
+        <div class="pill">Contract Address</div>
+        <div class="contract">
+          <span class="mono" id="addr">0x6208384e2dda2ab804a5b75aebc1609ba9ce7336</span>
+          <button class="btn copy" id="copyBtn" aria-label="Copy address">Copy</button>
+        </div>
 
-          <table class="allocation" aria-label="Token distribution">
-            <thead>
-              <tr><th>Category</th><th>Amount</th><th style="text-align:right">%</th></tr>
-            </thead>
-            <tbody>
-              <tr><td>Team / Main wallet (owner)</td><td>779,704,502</td><td style="text-align:right">77.97%</td></tr>
-              <tr><td>Locked / Vesting (liquidity locks)</td><td>200,000,000</td><td style="text-align:right">20.00%</td></tr>
-              <tr><td>Liquidity (PancakeSwap pool)</td><td>15,750,000</td><td style="text-align:right">1.58%</td></tr>
-              <tr><td>Other holders / buyers</td><td>4,545,498</td><td style="text-align:right">0.45%</td></tr>
-              <tr style="font-weight:700"><td>Total</td><td>1,000,000,000</td><td style="text-align:right">100%</td></tr>
-            </tbody>
-          </table>
+        <div class="pill">Contacts</div>
+        <div class="stack">
+          <a class="btn" href="mailto:team@poorcoin.net">team@poorcoin.net</a>
+          <a class="btn" href="https://poorcoin.net" target="_blank" rel="noopener">poorcoin.net</a>
+          <a class="btn" href="https://github.com/seeesko-sys/PoorCoin-site" target="_blank" rel="noopener">GitHub</a>
+        </div>
+      </div>
+    </section>
 
-          <div class="actions" style="margin-top:14px">
-            <button class="btn" onclick="openLink('https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336')">View on BscScan</button>
+    <!-- LOWER GRID -->
+    <section class="grid">
+      <div class="card">
+        <h3 style="margin:0 0 10px">Token Distribution (Total supply: 1,000,000,000 POOR)</h3>
+        <table>
+          <thead>
+            <tr><th>Catego
