--- a/index.html
+++ b/index.html
@@ -1,135 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>PoorCoin (POOR) — Official Site</title>
-<meta name="description" content="PoorCoin (POOR) — People's memecoin on BNB Smart Chain. Liquidity on PancakeSwap, transparent supply and active community.">
-<link rel="icon" href="poorcoin_32x32.svg" type="image/svg+xml">
-
-<!-- Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-
-<style>
-  :root{
-    --bg: #f7f9fc;
-    --card: #ffffff;
-    --ink: #0b1220;
-    --muted:#5a6577;
-    --accent:#3b82f6;  /* син */
-    --accent-2:#22c55e;/* зелен */
-    --accent-3:#f59e0b;/* жълт */
-    --ring:rgba(59,130,246,.35);
-    --radius:18px;
-  }
-  *{box-sizing:border-box}
-  html,body{margin:0;padding:0;background:linear-gradient(180deg,#f7f9fc 0%,#eef3ff 60%,#f7f9fc 100%);color:var(--ink);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
-  a{color:var(--accent);text-decoration:none}
-  a:hover{opacity:.9}
-  .container{max-width:1080px;margin:0 auto;padding:28px 18px 80px}
-  /* NAV */
-  .nav{display:flex;align-items:center;justify-content:space-between;gap:14px}
-  .brand{display:flex;align-items:center;gap:10px;font-weight:800;letter-spacing:.3px}
-  .brand img{width:40px;height:40px;border-radius:10px;background:#fff;object-fit:contain}
-  .navlinks{display:flex;gap:14px;flex-wrap:wrap}
-  .btn,button{border:0;border-radius:14px;padding:10px 14px;font-weight:700;cursor:pointer;transition:transform .08s ease,box-shadow .08s ease}
-  .btn-ghost{background:transparent}
-  .btn-cta{background:var(--accent);color:#fff;box-shadow:0 8px 24px rgba(59,130,246,.25)}
-  .btn-cta:hover{transform:translateY(-1px)}
-  /* HERO */
-  .hero{display:grid;grid-template-columns:1.2fr .9fr;gap:22px;margin-top:28px}
-  .card{background:var(--card);border-radius:var(--radius);padding:22px;box-shadow:0 12px 30px rgba(15,23,42,.06),0 1px 0 rgba(15,23,42,.05)}
-  .logo-wrap{display:grid;place-items:center;height:320px;background:#fff;border-radius:16px;border:1px solid #edf0f7}
-  .logo-wrap img{max-height:80%;max-width:85%;display:block}
-  .tag{display:inline-flex;gap:8px;align-items:center;padding:6px 10px;border-radius:999px;background:#eef6ff;color:#1e40af;font-weight:700;font-size:.82rem}
-  .title{font-size:clamp(26px,3.2vw,36px);line-height:1.12;margin:14px 0 10px}
-  .muted{color:var(--muted)}
-  .stack{display:flex;flex-wrap:wrap;gap:10px}
-  .pill{background:#f1f5f9;border:1px solid #e5eaf2;padding:8px 10px;border-radius:11px;font-weight:700;color:#0f172a}
-  /* CONTRACT STRIP */
-  .contract{display:flex;flex-wrap:wrap;align-items:center;gap:10px;background:#0f172a;color:#fff;border-radius:16px;padding:14px 16px;box-shadow:0 10px 28px rgba(2,6,23,.25)}
-  .mono{font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace}
-  .copy{background:#111827;color:#fff}
-  .copy:hover{box-shadow:0 0 0 3px var(--ring)}
-  /* GRID BELOW */
-  .grid{display:grid;grid-template-columns:1fr 1fr;gap:22px;margin-top:22px}
-  table{width:100%;border-collapse:collapse}
-  th,td{padding:10px 12px;border-bottom:1px solid #eef1f6;text-align:left}
-  th{font-size:.9rem;color:#334155}
-  td:last-child,th:last-child{text-align:right}
-  .callout{display:flex;flex-direction:column;gap:12px}
-  .btn-row{display:flex;flex-wrap:wrap;gap:10px}
-  .btn-green{background:var(--accent-2);color:#fff;box-shadow:0 8px 24px rgba(34,197,94,.25)}
-  .btn-yellow{background:var(--accent-3);color:#111827}
-  .btn-dark{background:#111827;color:#fff}
-  /* FOOTER */
-  footer{margin-top:36px;color:#475569}
-  .divider{height:1px;background:#e6ebf4;margin:18px 0}
-  .by{font-weight:800;letter-spacing:.3px}
-  /* small */
-  @media (max-width:880px){
-    .hero{grid-template-columns:1fr}
-    .grid{grid-template-columns:1fr}
-    .logo-wrap{height:260px}
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PoorCoin (POOR) - Official Site</title>
+  <link rel="icon" href="poorcoin_logo.svg" type="image/svg+xml">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(180deg, #f9fafc, #eef3ff);
+      color: #111;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 25px;
+      background: #fff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+    header h1 { margin: 0; font-size: 22px; }
+    nav a {
+      margin-left: 15px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #007bff;
+    }
+    nav a:hover { text-decoration: underline; }
+    .container {
+      max-width: 1000px;
+      margin: 30px auto;
+      padding: 20px;
+    }
+    .logo-box {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    .logo-box img {
+      max-width: 220px;
+      background: #fff;
+      padding: 15px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    .card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      margin-bottom: 25px;
+    }
+    h2 { margin-top: 0; }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    th, td {
+      padding: 10px;
+      border-bottom: 1px solid #eee;
+      text-align: left;
+    }
+    th { background: #f5f7fb; }
+    .btns {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+      margin-top: 15px;
+    }
+    .btns a {
+      display: inline-block;
+      padding: 10px 15px;
+      border-radius: 8px;
+      font-weight: bold;
+      text-decoration: none;
+      color: #fff;
+      background: #007bff;
+      transition: background 0.2s;
+    }
+    .btns a:hover { background: #0056b3; }
+    footer {
+      text-align: center;
+      background: #f1f3f8;
+      padding: 20px;
+      margin-top: 40px;
+      font-size: 14px;
+      color: #444;
+    }
+    footer p {
+      margin: 5px 0;
+    }
+    footer strong {
+      font-size: 16px;
+      color: #000;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <!-- NAV -->
-    <nav class="nav">
-      <div class="brand">
-        <img src="poorcoin_logo.png" alt="PoorCoin logo">
-        <span>POORCOIN</span>
-      </div>
-      <div class="navlinks">
-        <a class="btn btn-ghost" href="#contract">Contract</a>
-        <a class="btn btn-ghost" href="https://t.me/poorcoin_bsc" target="_blank" rel="noopener">Telegram</a>
-        <a class="btn btn-ghost" href="https://x.com/SeeeskoTodorov" target="_blank" rel="noopener">Twitter / X</a>
-        <a class="btn btn-ghost" href="https://medium.com/@seeesko/poorcoin-poor-the-peoples-meme-token-2c7d47ef2989" target="_blank" rel="noopener">Medium</a>
-        <a class="btn btn-cta" href="https://pancakeswap.finance/swap?outputCurrency=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336&chain=bsc" target="_blank" rel="noopener">Buy on PancakeSwap</a>
-      </div>
+  <header>
+    <h1>PoorCoin (POOR)</h1>
+    <nav>
+      <a href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">Contract</a>
+      <a href="https://t.me/poorcoin_bsc" target="_blank">Telegram</a>
+      <a href="https://x.com/SeeeskoTodorov" target="_blank">Twitter</a>
+      <a href="https://medium.com/@seeesko" target="_blank">Medium</a>
     </nav>
+  </header>
 
-    <!-- HERO -->
-    <section class="hero">
-      <div class="card">
-        <span class="tag">BNB Smart Chain • BEP-20</span>
-        <h1 class="title">PoorCoin (POOR)</h1>
-        <p class="muted">The people’s meme token on BNB Chain — fair access, simple branding, transparent supply and PancakeSwap liquidity.</p>
-        <div class="logo-wrap" aria-label="Official logo">
-          <img src="poorcoin_logo.png" alt="POOR logo (hand-drawn)">
-        </div>
+  <div class="container">
+    <div class="logo-box">
+      <img src="poorcoin_logo.png" alt="PoorCoin Logo">
+    </div>
+
+    <div class="card">
+      <h2>About PoorCoin</h2>
+      <p>PoorCoin (POOR) is the people's meme token on BNB Smart Chain. With transparent supply, locked liquidity, and active community channels, POOR is here to give everyone a chance.</p>
+      <div class="btns">
+        <a href="https://pancakeswap.finance/swap?outputCurrency=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336&chain=bsc" target="_blank">Buy on PancakeSwap</a>
+        <a href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">View on BscScan</a>
       </div>
+    </div>
 
-      <div class="card callout" id="contract">
-        <div class="pill">Official Links</div>
-        <div class="btn-row">
-          <a class="btn btn-dark" href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank" rel="noopener">View on BscScan</a>
-          <a class="btn btn-green" href="https://pancakeswap.finance/swap?outputCurrency=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336&chain=bsc" target="_blank" rel="noopener">Trade on PancakeSwap</a>
-          <a class="btn btn-yellow" href="https://pancakeswap.finance/add?chain=bsc&token0=BNB&token1=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank" rel="noopener">Add Liquidity</a>
-        </div>
+    <div class="card">
+      <h2>Tokenomics</h2>
+      <table>
+        <tr><th>Category</th><th>Amount</th><th>%</th></tr>
+        <tr><td>Main Wallet</td><td>779,704,502</td><td>77.97%</td></tr>
+        <tr><td>Locked</td><td>200,000,000</td><td>20.00%</td></tr>
+        <tr><td>Liquidity Pool</td><td>15,750,000</td><td>1.58%</td></tr>
+        <tr><td>Holders</td><td>4,545,498</td><td>0.45%</td></tr>
+        <tr><th>Total</th><th>1,000,000,000</th><th>100%</th></tr>
+      </table>
+    </div>
+  </div>
 
-        <div class="pill">Contract Address</div>
-        <div class="contract">
-          <span class="mono" id="addr">0x6208384e2dda2ab804a5b75aebc1609ba9ce7336</span>
-          <button class="btn copy" id="copyBtn" aria-label="Copy address">Copy</button>
-        </div>
-
-        <div class="pill">Contacts</div>
-        <div class="stack">
-          <a class="btn" href="mailto:team@poorcoin.net">team@poorcoin.net</a>
-          <a class="btn" href="https://poorcoin.net" target="_blank" rel="noopener">poorcoin.net</a>
-          <a class="btn" href="https://github.com/seeesko-sys/PoorCoin-site" target="_blank" rel="noopener">GitHub</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- LOWER GRID -->
-    <section class="grid">
-      <div class="card">
-        <h3 style="margin:0 0 10px">Token Distribution (Total supply: 1,000,000,000 POOR)</h3>
-        <table>
-          <thead>
-            <tr><th>Catego
+  <footer>
+    <p>© 2025 PoorCoin. All Rights Reserved.</p>
+    <p><strong>BY TODOROV & LESEV</strong></p>
+  </footer>
+</body>
+</html>
