--- a/index.html
+++ b/index.html
@@ -1,141 +1,123 @@
 <!doctype html>
-<html lang="bg">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PoorCoin (POOR) — Official Site</title>
-  <meta name="description" content="PoorCoin (POOR) — The People’s Meme Token on BNB Smart Chain." />
+  <meta name="description" content="PoorCoin (POOR) — The People's Meme Token on BNB Smart Chain (BEP-20). Contract, links, tokenomics, FAQ and whitepaper." />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#f7f8fb;
-      --card:#ffffff;
-      --text:#0f172a;
-      --muted:#475569;
-      --brand:#111827;
-      --accent:#22c55e;
-      --ring: rgba(34,197,94,.35);
-      --shadow: 0 10px 30px rgba(2,6,23,.10);
-      --radius: 18px;
+      --bg:#0f172a;           /* slate-900 */
+      --card:#111827;         /* gray-900 */
+      --muted:#94a3b8;        /* slate-400 */
+      --text:#e5e7eb;         /* gray-200 */
+      --accent:#22d3ee;       /* cyan-400 */
+      --accent-2:#a78bfa;     /* violet-400 */
+      --ok:#10b981;           /* emerald-500 */
+      --chip:#1f2937;         /* gray-800 */
+      --shadow: 0 10px 30px rgba(0,0,0,.35);
+      --radius:16px;
     }
     *{box-sizing:border-box}
-    html,body{margin:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif}
-    a{color:var(--text);text-decoration:none}
-    .container{max-width:1100px;margin:0 auto;padding:28px 18px 60px}
+    html,body{margin:0;background:radial-gradient(1200px 800px at -10% -20%, rgba(34,211,238,.15), transparent 60%), radial-gradient(900px 600px at 120% -10%, rgba(167,139,250,.12), transparent 60%), var(--bg); color:var(--text); font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif}
+    a{color:inherit}
+    .wrap{max-width:1100px;margin:0 auto;padding:28px 18px 80px}
     header{display:flex;align-items:center;gap:14px}
-    header .logo{
-      width:64px;height:64px;display:grid;place-items:center;
-      background:var(--card);border-radius:16px;box-shadow:var(--shadow)
-    }
-    header .logo img{max-width:90%;height:auto;display:block}
-    header .title{line-height:1}
-    header .title h1{margin:0;font-size:28px;font-weight:800;letter-spacing:.2px}
-    header .title p{margin:6px 0 0;color:var(--muted);font-weight:600}
+    .badge{background:#fff;border-radius:10px;padding:6px 10px;color:#111; font-weight:700; display:inline-flex; align-items:center; gap:8px; box-shadow:var(--shadow)}
+    .logo-badge{width:28px;height:28px;border-radius:7px;display:inline-flex;align-items:center;justify-content:center;background:#fff}
+    .brand{font-size:28px;font-weight:800;letter-spacing:.2px}
+    .sub{color:var(--muted);font-size:14px;margin-top:6px}
+    nav{margin-left:auto;display:flex;gap:10px}
+    .navlink{padding:10px 14px;border-radius:999px;background:transparent;border:1px solid rgba(255,255,255,.12);color:var(--text);text-decoration:none;font-weight:600}
+    .navlink:hover{border-color:rgba(255,255,255,.25);}
 
-    /* HERO */
-    .hero{
-      margin-top:18px;display:grid;grid-template-columns:1.2fr .8fr;gap:22px
-    }
-    @media (max-width:900px){ .hero{grid-template-columns:1fr} }
-    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow)}
-    .hero .left{padding:28px 28px}
-    .brand-badge{display:inline-flex;align-items:center;gap:10px;
-      padding:10px 14px;border-radius:999px;background:#eef2ff;color:#3730a3;
-      font-weight:700;letter-spacing:.4px;text-transform:uppercase;font-size:12px}
-    .logo-wrap{
-      margin-top:16px;background:#fff;border-radius:20px;
-      padding:26px;display:grid;place-items:center;border:1px solid #e5e7eb;
-      min-height:220px
-    }
-    .logo-wrap img{max-width:540px;width:100%;height:auto;display:block}
+    .grid{display:grid;grid-template-columns:1.2fr .9fr; gap:22px; margin-top:24px}
+    .card{background:linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02)); border:1px solid rgba(255,255,255,.08); border-radius:var(--radius); box-shadow:var(--shadow)}
+    .card .inner{padding:20px}
+    .label{font-size:12px;letter-spacing:.12em;text-transform:uppercase;color:var(--muted);font-weight:800}
 
-    .hero .right{padding:28px 28px}
-    .muted{color:var(--muted);font-weight:600;font-size:13px;margin-bottom:10px}
-    .addr-box{
-      background:#0b1220;color:#cbd5e1;border-radius:16px;padding:16px;display:flex;
-      align-items:center;gap:10px;justify-content:space-between;border:1px solid #0f172a
-    }
-    .addr{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,"Liberation Mono",Consolas,"Courier New",monospace;
-      font-size:15px;color:#e2e8f0;overflow:auto;white-space:nowrap}
+    .logo-box{background:#fff;border-radius:14px;height:420px;display:flex;align-items:center;justify-content:center; box-shadow:inset 0 0 0 1px #eee}
+    .logo-box img{max-width:78%;height:auto;display:block;filter:drop-shadow(0 8px 24px rgba(0,0,0,.2));}
+
+    .contract{display:flex;flex-direction:column;gap:12px}
+    .addr{display:flex;gap:10px;align-items:center}
+    .addr .chip{background:var(--chip);border-radius:12px;padding:12px 14px;font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace; white-space:nowrap; overflow:auto; max-width:100%;}
+    .btns{display:flex;flex-wrap:wrap;gap:10px}
     .btn{
-      appearance:none;border:0;border-radius:12px;padding:12px 16px;font-weight:800;
-      background:var(--brand);color:#fff;cursor:pointer;transition:transform .05s ease, box-shadow .2s ease;
-      box-shadow:0 6px 16px rgba(17,24,39,.18)
+      background:linear-gradient(135deg, var(--accent), var(--accent-2));
+      border:none;color:#001018;font-weight:800;text-decoration:none;
+      padding:12px 16px;border-radius:12px;box-shadow:var(--shadow);
     }
-    .btn:hover{transform:translateY(-1px)}
-    .btn:active{transform:translateY(0)}
-    .btn.secondary{background:#1118270d;color:#111827;border:1px solid #e5e7eb}
-    .actions{display:flex;flex-wrap:wrap;gap:10px;margin-top:14px}
-    .pill{
-      display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:999px;
-      background:#ecfeff;border:1px solid #a5f3fc;color:#155e75;font-weight:700;font-size:12px
-    }
+    .btn.secondary{background:#111827;color:#e5e7eb;border:1px solid rgba(255,255,255,.12)}
+    .btn.outline{background:transparent;color:var(--text);border:1px solid rgba(255,255,255,.2)}
+    .btn.small{padding:8px 12px;font-weight:700}
+    .copy{background:#0b1220;color:#b5e3ff;border:1px solid rgba(255,255,255,.2)}
+    .kpis{display:grid;grid-template-columns:repeat(3,1fr);gap:10px;margin-top:6px}
+    .kpi{background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:12px;padding:10px;text-align:center}
+    .kpi h4{margin:0;font-size:18px}
+    .kpi p{margin:4px 0 0;color:var(--muted);font-size:12px}
 
-    /* LINKS GRID */
-    .grid{margin-top:22px;display:grid;grid-template-columns:1fr 1fr;gap:22px}
-    @media (max-width:900px){ .grid{grid-template-columns:1fr} }
-    .links{padding:22px}
-    .links h3{margin:0 0 14px;font-size:16px}
-    .links ul{list-style:none;margin:0;padding:0;display:grid;gap:10px}
-    .links a.link{
-      display:flex;justify-content:space-between;align-items:center;
-      padding:14px 14px;border:1px solid #e5e7eb;border-radius:12px;font-weight:700
-    }
-    .links a.link:hover{box-shadow:var(--shadow);border-color:#dbeafe}
-    .tag{font-size:11px;padding:6px 9px;border-radius:999px;background:#f1f5f9;color:#0f172a;border:1px solid #e5e7eb}
+    .section{margin-top:28px}
+    table{width:100%;border-collapse:collapse;border-radius:12px;overflow:hidden}
+    th,td{padding:12px 14px;border-bottom:1px solid rgba(255,255,255,.08)}
+    th{background:rgba(255,255,255,.05);text-align:left;font-size:13px;color:#cbd5e1}
+    tr:last-child td{border-bottom:none}
+    .good{color:var(--ok);font-weight:700}
 
-    footer{
-      margin-top:38px;text-align:center;color:#0f172a;background:var(--card);
-      border-radius:16px;padding:16px;font-weight:800;letter-spacing:.6px;box-shadow:var(--shadow)
-    }
-    .copyright{font-weight:600;opacity:.9}
-    .byline{margin-top:6px;font-size:14px}
-    .copy-ok{margin-left:8px;color:var(--accent);font-weight:800;display:none}
+    .chips{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
+    .pill{background:var(--chip);border:1px solid rgba(255,255,255,.1);color:#d1d5db;border-radius:999px;padding:8px 12px;font-weight:700}
+
+    .links{display:grid;grid-template-columns:1fr 1fr; gap:12px}
+    .link{display:flex;justify-content:space-between;align-items:center;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:12px;padding:12px 14px}
+    .link span{color:var(--muted)}
+    .link a{font-weight:800;text-decoration:none;background:#0b1220;color:#c8d9ff;border:1px solid rgba(255,255,255,.18);padding:6px 10px;border-radius:8px}
+
+    details{background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:12px;padding:12px 14px}
+    summary{cursor:pointer;font-weight:800}
+    details p{margin:8px 0 0;color:#cbd5e1}
+
+    footer{margin-top:38px;text-align:center;color:#d1d5db}
+    footer .by{font-weight:900; letter-spacing:.06em; margin-top:6px}
+    .okchip{display:inline-flex;gap:8px;align-items:center;background:rgba(16,185,129,.1);border:1px solid rgba(16,185,129,.35);color:#a7f3d0;padding:8px 12px;border-radius:999px;font-weight:800}
+    @media (max-width:900px){ .grid{grid-template-columns:1fr} .logo-box{height:360px} }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="wrap">
     <header>
-      <div class="logo"><img src="poorcoin_logo.png" alt="PoorCoin Logo" width="60" height="60"></div>
-      <div class="title">
-        <h1>POOR</h1>
-        <p>The People’s Meme Token — BNB Smart Chain (BEP-20)</p>
+      <span class="badge"><span class="logo-badge">🟦</span> POOR</span>
+      <div>
+        <div class="brand">PoorCoin (POOR)</div>
+        <div class="sub">The People’s Meme Token — BNB Smart Chain (BEP-20)</div>
       </div>
+      <nav>
+        <a class="navlink" href="#tokenomics">Tokenomics</a>
+        <a class="navlink" href="#links">Links</a>
+        <a class="navlink" href="whitepaper.html" target="_blank">Whitepaper</a>
+      </nav>
     </header>
 
-    <section class="hero">
-      <!-- LEFT: Logo -->
-      <div class="card left">
-        <span class="brand-badge">Official Logo</span>
-        <div class="logo-wrap">
-          <!-- използвай PNG логото ти; при нужда посочи правилен път -->
-          <img src="poorcoin_logo.png" alt="POOR logo">
-        </div>
-        <div class="pill" style="margin-top:14px;">
-          Contract verified on BscScan
-        </div>
-      </div>
-
-      <!-- RIGHT: Contract + buttons -->
-      <div class="card right">
-        <div class="muted">Contract Address (BEP-20)</div>
-        <div class="addr-box">
-          <div class="addr" id="addr">
-            0x6208384e2dda2ab804a5b75aebc1609ba9ce7336
+    <div class="grid">
+      <!-- Left: Logo -->
+      <section class="card">
+        <div class="inner">
+          <div class="label">Official logo</div>
+          <div class="logo-box">
+            <!-- твоето PNG лого -->
+            <img src="poorcoin_logo.png" alt="PoorCoin Logo" />
           </div>
-          <button class="btn" id="copyBtn">Copy</button>
+          <div class="chips">
+            <span class="okchip">✔ Contract verified on BscScan</span>
+          </div>
         </div>
-        <div class="actions">
-          <a class="btn" href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank" rel="noopener">View on BscScan</a>
-          <a class="btn secondary" href="https://pancakeswap.finance/swap?inputCurrency=BNB&outputCurrency=0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank" rel="noopener">Buy on PancakeSwap</a>
-          <a class="btn secondary" href="https://pancakeswap.finance/add/BNB/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank" rel="noopener">Add Liquidity</a>
-          <span id="copied" class="copy-ok">Copied!</span>
-        </div>
-        <div class="links card" style="margin-top:16px;padding:16px">
-          <h3>Project Links</h3>
-          <ul>
-            <li><a class="link" href="https://poorcoin.net" target="_blank" rel="noopener">Website <span class="tag">poorcoin.net</span></a></li>
-            <li><a class="link" href="https://t.me/poorcoin_bsc" target="_blank" rel="noopener">Telegram <span class="tag">@poorcoin_bsc</span></a></li>
-            <li><a class="link" href="https://x.com/SeeeskoTodorov" target="_blank" rel="noopener">Twitter / X <span class="tag">@SeeeskoTodorov</span></a></li>
-            <li><a class="link" href="https://medium.com/@seeesko/poorcoin-poor-the-peoples-meme-token-2c7d47ef2989" target="_blank" rel="noopener">Medium <span class="tag">Article</span></a
+      </section>
+
+      <!-- Right: Contract & Buttons -->
+      <section class="card">
+        <div class="inner contract">
+          <div class="label">Contract Address (BEP-20)</div>
+          <div class="addr">
+            <div id="addr" class="chip">0x6208384e2dda2ab804a5b75aebc1609ba9ce7336</div>
+            <button id="copyBtn" class="btn
